# Sun_and_Seasons_Calendar

./: .gitattributes  .gitignore  README.md  Sun-Seasons-Calendar-Project-Plan.md  mcp_server.py  preview.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
app/: cli.py  geocode.py  ics_builder.py  main.py  seasons.py  solar.py  timezone.py
static/: style.css
templates/: help.html  index.html
tests/: test_api.py  test_cli.py  test_geocode.py  test_ics.py  test_seasons.py  test_solar.py  test_timezone.py  test_viz.py
viz/: make_video.py  poc_june10.py  poc_june8.py  render_day.py
