[project]
name = "sun-and-seasons-calendar"
version = "0.1.0"
description = "Location-aware sunrise/sunset/seasons ICS calendar generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "astral>=3.2",
    "timezonefinder>=6.5",
    "geopy>=2.4",
    "icalendar>=5.0",
    "jinja2>=3.1",
    "mcp[cli]>=1.0",
    "slowapi>=0.1.9",
]

[project.scripts]
sun-and-seasons     = "app.cli:main"
sun-and-seasons-mcp = "mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
viz = [
    "matplotlib>=3.8",
    "cartopy>=0.23",
    "numpy>=1.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that make real network calls (deselect with '-m not live')",
    "slow: marks tests that build full grids (slow, skip with '-m not slow')",
]
